--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    Olá!
+    <div class="topo"><div class="titulo"><h1>PARROT CARD GAME</h1></div></div>
+    <div class="jogo">
+        <div class="carta"></div>
+        <div class="carta"></div>
+        <div class="carta"></div>
+        <div class="carta"></div>
+        <div class="carta"></div>
+        <div class="carta"></div>
+        <div class="carta"></div>
+        <div class="carta"></div>
+        <div class="carta"></div>
+        <div class="carta"></div>
+        <div class="carta"></div>
+        <div class="carta"></div>
+    </div>
 </body>
 </html>
