Adicionei um prompt, que pergunta ao usuário com quantas cartas ele gostaria de jogar

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         <div class="carta"></div>
         <div class="carta"></div>
     </div>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
