Ao virar um carta, ela permanece virada até a próxima ser selecionada; Os pares encontrados permanecem virados; Duas cartas que não são pares desviram depois de 1 segundo; Problema: É possível virar mais de duas cartas.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Parrot Card Game</title>
 </head>
 <body>
     <div class="topo"><div class="titulo"><h1>PARROT CARD GAME</h1></div></div>
