Adicionei um cronômetro ao jogo; E ele aparece na frase de fim de jogo.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div class="topo"><div class="titulo"><h1>PARROT CARD GAME</h1></div></div>
+    <div class="moldura"><div class="cronometro">Duração:<span>0</span>s</div></div>
     <div class="jogo">
     </div>
     <script src="./js/scripts.js"></script>
