feat: flipped cards

--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilos.css">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/estilos.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <title>Parrot Card Game</title>
-</head>
-<body>
-    <div class="topo"><div class="titulo"><h1>PARROT CARD GAME</h1></div></div>
-    <div class="moldura"><div class="cronometro">Duração:<span>0</span>s</div></div>
-    <div class="jogo">
+  </head>
+  <body>
+    <div class="top">
+      <div class="title"><h1>PARROT CARD GAME</h1></div>
+    </div>
+    <div class="core">
+      <div class="clock">
+        <div class="time">Duração:<span class="seconds">0</span>s</div>
+      </div>
+      <div class="game"></div>
     </div>
     <script src="./js/scripts.js"></script>
-</body>
+  </body>
 </html>
